@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-15T08:23:35Z",
-  "count_outdated" : 518,
-  "uniques_outdated" : 300,
-  "count" : 547,
-  "uniques" : 316,
+  "timestamp" : "2022-09-15T16:23:36Z",
+  "count_outdated" : 520,
+  "uniques_outdated" : 301,
+  "count" : 549,
+  "uniques" : 317,
   "clones" : [
-    {
-      "timestamp": "2022-09-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-02T00:00:00Z",
       "count": 3,
@@ -91,10 +84,10 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
