@@ -1,12 +1,7 @@
 {
   "count": 29,
-  "uniques": 5,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-09-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-02T00:00:00Z",
       "count": 3,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
