@@ -1,3 +1,11 @@
+2022-09-15T16:23:36Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3062070815
+* notice: last 14d: unq all: 6 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 300 518 / 316 547
+* notice: next accum: outdated-unq outdated-all / unq all: 301 520 / 317 549
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +3 -0 -0 / 3 3
+* notice: removed / changed dates: [2022-09-01] / [2022-09-15]
+
 2022-09-15T08:23:35Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3058896349
 * notice: last 14d: unq all: 5 29
